2009-05-10  Marek Habersack  <mhabersack@novell.com>

	* Makefile (TEST_RESOURCE_FILES): added
	Test/mainsoft/NunitWebResources/ExpressionInListControl.aspx

2009-04-28  Marek Habersack  <mhabersack@novell.com>

	* Makefile (TEST_RESOURCE_FILES): added
	Test/mainsoft/NunitWebResources/LinkInHeadWithEmbeddedExpression.aspx

2009-04-24  Marek Habersack  <mhabersack@novell.com>

	* System.Web_test.dll.sources: added
	System.Web.UI/PageParserFilterTest.cs

2009-04-16  Marek Habersack  <mhabersack@novell.com>

	* Makefile (TEST_RESOURCE_FILES): added
	Test/mainsoft/NunitWebResources/NoBindForMethodsWithBindInName.aspx

2009-02-26  Marek Habersack  <mhabersack@novell.com>

	* System.Web.dll.sources: added System.Web/IisTraceListener.cs

2009-02-05  Marek Habersack  <mhabersack@novell.com>

	* Makefile (TEST_RESOURCE_FILES): added
	Test/mainsoft/NunitWebResources/NoDoubleOnInitOnRemoveAdd.aspx and
	Test/mainsoft/NunitWebResources/NoDoubleOnInitOnRemoveAdd.aspx.cs
	Test/mainsoft/NunitWebResources/LoginDisplayRememberMe.aspx

2009-01-27  Marek Habersack  <mhabersack@novell.com>

	* System.Web.dll.sources: added System.Web.Util/SearchPattern.cs

2009-01-22  Marek Habersack  <mhabersack@novell.com>

	* System.Web.dll.sources: added
	System.Web.Compilation/BuildManagerCacheItem.cs,
	System.Web.Compilation/BuildManagerDirectoryBuilder.cs,
	System.Web.Compilation/BuildProviderGroup.cs

	* Makefile (SYSTEMCORE_DEP): added. Defines SYSTEMCORE_DEP on the
	mcs command line when System.Core is present.
	Added the DEVEL define, which defines DEVEL on the mcs command
	line. This is used to conditionally compile development helper code in
	System.Web.Util.FileUtils (and possibly other stuff later on)
	If NO_SYSTEMCORE_DEP is defined System.Web.dll will not be linked
	with System.Core.dll and BuildManager will use ReaderWriterLock
	instead of ReaderWriterLockSlim.

2009-01-20  Marek Habersack  <mhabersack@novell.com>
