@@ -1,3 +1,7 @@
+2009-06-04  Marek Habersack  <mhabersack@novell.com>
+
+	* TemplateControlCompilerTest.cs: added test for bug #508888
+
 2009-05-10  Marek Habersack  <mhabersack@novell.com>
 
 	* TemplateControlCompilerTest.cs: added a test for expressions in
