@@ -1,3 +1,8 @@
+2009-06-04  Marek Habersack  <mhabersack@novell.com>
+
+	* Makefile (TEST_RESOURCE_FILES): added
+	Test/mainsoft/NunitWebResources/ServerSideControlsInScriptBlock.aspx
+
 2009-05-10  Marek Habersack  <mhabersack@novell.com>
 
 	* Makefile (TEST_RESOURCE_FILES): added
